[package]
name = "managed-identity-concept"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/api_server.rs"

[dependencies]
pretty_env_logger = "0.5"
dotenv = "0.15"
log = "0.4"
actix-web = "4"
jsonwebtoken = "9.3"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12" , features = ["rustls-tls", "json"]}