[package]
name = "managed-identity-concept"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/api_server.rs"

[dependencies]
pretty_env_logger = "0.5"
dotenv = "0.15"
log = "0.4"
actix-web = "4"
jsonwebtoken = "9.3"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12" , default-features = false, features = ["rustls-tls", "json"]}


[profile.release]
lto = "fat"          # Enables Link-Time Optimization (LTO)
codegen-units = 1    # Maximizes LTO optimization
opt-level = "z"      # Optimize for binary size
strip = true         # Removes debug symbols to reduce size
panic = "abort"      # Removes panic-related stack unwinding to reduce binary size